ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Docket_Review__c/Docket_Review__c.object-meta.xml
<CustomObject>
    <label>Docket Review</label>
    <nameField>
        <displayFormat>DR-{0000}</displayFormat>
        <label>Docket Review Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Docket Reviews</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>