ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Docket_Review__c/fields/Grant__c.field-meta.xml
<CustomField>
    <fullName>Grant__c</fullName>
    <label>Grant</label>
    <referenceTo>Grantees__c</referenceTo>
    <relationshipLabel>Docket Reviews</relationshipLabel>
    <relationshipName>Docket_Reviews</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>