ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Docket_Review__c/fields/Has_Timely_Important_Funding_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Has_Timely_Important_Funding_Opportunity__c</fullName>
    <label>Has Timely/Important Funding Opportunity</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>