ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Docket_Review__c/fields/mpactful_Org_with_Strong_Strategy__c.field-meta.xml
<CustomField>
    <fullName>mpactful_Org_with_Strong_Strategy__c</fullName>
    <label>Impactful Org with Strong Strategy</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>