ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Docket_Review__c/fields/Organization_Aligns_with_GC_Goals__c.field-meta.xml
<CustomField>
    <fullName>Organization_Aligns_with_GC_Goals__c</fullName>
    <label>Organization Aligns with GC Goals</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>