ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Docket_Review__c/fields/Reviewer_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Reviewer_Full_Name__c</fullName>
    <label>Reviewer Full Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>