ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Docket_Review__c/fields/Rooted_in_Latino_Community_and_Culture__c.field-meta.xml
<CustomField>
    <fullName>Rooted_in_Latino_Community_and_Culture__c</fullName>
    <label>Rooted in Latino Community and Culture</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>